# wasc-search-skill

./: .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml
docs/: release_copy.md
docs/plans/: 2026-04-08-first-runnable-search-skill.md
ref/: competition_eval_cases.json  competition_eval_report.json
scripts/: generate_bilibili_demo.py  run_competition_eval.py  run_shadow_benchmark.py
skill/: SKILL.md  cleaner.py  config.py  evaluation.py  fetcher.py  generator.py  main.py  models.py  planner.py  ranker.py  router.py
skill/sources/: __init__.py  academic.py  base.py  tavily.py  web.py
tests/: test_competition_optimizer.py  test_config.py  test_evaluation.py  test_fetcher.py  test_main.py  test_minimax_generator.py  test_output_format.py  test_planner.py  test_policy_change_fallback.py  test_policy_change_gate.py  test_ranker.py  test_router.py  test_shadow_queries.py  test_smoke.py  test_sources.py  test_tavily_source.py  test_video_demo.py
